correct log returns

--- a/anomaly_invNN.ipynb
+++ b/anomaly_invNN.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# anomaly detection for log prices\n",
+    "# anomaly detection for log returns\n",
     "\n",
     "**Stock selection**: 48 components of HSI except 0006.HK (large drops due to special dividends) and 1997.HK (only exist starting from 23 Nov 2017).\n",
     "\n",
     "**Training data**: log (closing) prices $\\log S$ in the year 2017.\n",
     "Testing data: $\\log S$ in 2018.\n",
     "\n",
-    "**Aim**: Regarding the distributions of log prices in 2017 as baseline, then test if there are any anomalies in $\\log S$ in 2018.\n",
+    "**Aim**: Regarding the distributions of log returns in 2017 as baseline, then test if there are any anomalies in $\\log S$ in 2018.\n",
     "\n",
-    "The idea is fed the log prices as inputs to an invertible neural network (invNN). The outputs $\\vec{z}$ of the invNN are trained to be (multivariate) Gaussian distributions of $z_i \\sim N(0,1)$. When the test data are fed to the trained invNN, if the maximum of the output $\\max_i z_i$ reveals a peak (see below), then it is likely that an anomaly has occured in the market of 48 components."
+    "The idea is fed the log returns as inputs to an invertible neural network (invNN). The outputs $\\vec{z}$ of the invNN are trained to be (multivariate) Gaussian distributions of $z_i \\sim N(0,1)$. When the test data are fed to the trained invNN, if the maximum of the output $\\max_i z_i$ reveals a peak (see below), then it is likely that an anomaly has occured in the market of 48 components."
    ]
   },
   {
@@ -269,13 +269,7 @@
       "245/245 [==============================] - 0s 913us/step - loss: -212.1906 - val_loss: -214.0165\n",
       "\n",
       "Epoch 00040: val_loss did not improve from -216.63706\n",
-      "Epoch 41/120\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 41/120\n",
       "245/245 [==============================] - 0s 908us/step - loss: -214.3853 - val_loss: -216.4247\n",
       "\n",
       "Epoch 00041: val_loss did not improve from -216.63706\n",
