slight amend pieceLinReg.ipynb

--- a/piecewiseLinReg.ipynb
+++ b/piecewiseLinReg.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the theory of **Mixture of Experts**, refer to [notes](https://github.com/phcchan/invNN/blob/master/ML-notes.pdf)."
+    "For the theory of **Mixture of Experts**, refer to [notes](https://github.com/phcchan/invNN/blob/master/ML-notes.pdf) section 2.6.5."
    ]
   },
   {
@@ -43,7 +43,6 @@
     "hsi = pd.read_csv('data_MoE/HSI.csv', index_col='Date', parse_dates=['Date',])\n",
     "\n",
     "y0 = hsi.Close.values\n",
-    "#x0 = np.array(range(len(y0)))\n",
     "x0 = (hsi.index - hsi.index.min()) / np.timedelta64(1,'D')\n",
     "fig, ax = plt.subplots(1,1)\n",
     "_ = ax.plot(hsi.index.values, y0)\n",
@@ -157,7 +156,7 @@
     "    y_pred = X @ w_k\n",
     "\n",
     "    # the following might not work due to normal_ik might \n",
-    "    # overflow/underflow if the factors inside np.exp() are too small/large,\n",
+    "    # underflow if the factors inside np.exp() are too large,\n",
     "    # which should be 'balanced' by the normalization in the return statement\n",
     "    # note that we can solve this by softmax function, with eta_ik = log(r_ik * normal_ik)\n",
     "    '''\n",
@@ -169,7 +168,8 @@
     "    return normalize(r_ik, axis=1)\n",
     "    '''\n",
     "    \n",
-    "    log_r_normal_ik = log_pi_ik -np.square(y0[:,np.newaxis] - y_pred) / (2.*sigmaSq_k[np.newaxis,:]) \\\n",
+    "    log_r_normal_ik = log_pi_ik \\\n",
+    "                      - np.square(y0[:,np.newaxis] - y_pred) / (2.*sigmaSq_k[np.newaxis,:]) \\\n",
     "                      - np.log(np.sqrt(2.*np.pi*sigmaSq_k[np.newaxis,:]))\n",
     "    \n",
     "    return softmax(log_r_normal_ik)"
