change naming -> normalizing flow

--- a/anomaly_invNN.ipynb
+++ b/anomaly_invNN.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Aim**: Regarding the distributions of log returns in 2017 as baseline, then test if there are any anomalies in $\\log S$ in 2018.\n",
     "\n",
-    "The idea is fed the log returns as inputs to an invertible neural network (invNN). The outputs $\\vec{z}$ of the invNN are trained to be (multivariate) Gaussian distributions of $z_i \\sim N(0,1)$. When the test data are fed to the trained invNN, if the maximum of the output $\\max_i z_i$ reveals a peak (see below), then it is likely that an anomaly has occured in the market of 48 components."
+    "The idea is fed the log returns as inputs to a normalizing flow. The outputs $\\vec{z}$ are trained to be (multivariate) Gaussian distributions of $z_i \\sim N(0,1)$. When the test data are fed to the trained network, if the maximum of the output $\\max_i z_i$ reveals a peak (see below), then it is likely that an anomaly has occured in the market of 48 components."
    ]
   },
   {
