--- a/option_MC_invNN.ipynb
+++ b/option_MC_invNN.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "## Generate samples from the learned distribution of $\\log S$\n",
     "\n",
-    "Using invertible neural net (invNN), the distribution of $\\log S$ is learned. The following is the sampled distribution from the invNN:"
+    "Using normalizing flow (invNN), the distribution of $\\log S$ is learned. The following is the sampled distribution from the invNN:"
    ]
   },
   {
