add explanation in PiecewiseLinReg.ipynb

--- a/piecewiseLinReg.ipynb
+++ b/piecewiseLinReg.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Piecewise Linear Regression\n",
+    "\n",
+    "This notebook implements the piecewise linear regression, which is a special case of mixture of experts. We input a dataset $(x_i,y_i)$ for $i=0,\\dots,N-1$, and the number of experts (linear functions) $K$ we wanted. The algorithm can be derived by using the Expectation Maximum (EM) method.\n",
+    "\n",
     "For the theory of **Mixture of Experts**, refer to [notes](https://github.com/phcchan/invNN/blob/master/ML-notes.pdf) section 2.6.5."
    ]
   },
@@ -252,11 +256,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Explanations\n",
+    "\n",
+    "Here we set the number of linear functions $K=3$.\n",
+    "\n",
+    "The upper panel shows the output plot with 3 fitted linear functions in color. The lower panel shows the corresponding responsibility $r_{ik}$ of each expert $k$ for data points $i$.\n",
+    "\n",
     "Keys:\n",
     "\n",
     "- $i$ : data points, total of $N$\n",
     "- $k$ : experts (linear functions), total of $K$\n",
-    "- $r_{ik} = \\pi_{ik} \\odot p(y_i|x_i, z_i=k) \\in [0,1]$ with constraint $\\sum_k r_{ik} = 1$ : responsibility for expert $k$ takes for data point $i$, where $\\odot$ is elementwise product, $\\pi_{ik} = p(z_i=k|x_i,\\theta)$ and $z_i$ is the latent variable for the experts. Explicitly, $p(z_i|x_i,\\theta)=\\mathrm{Catagorical}(z_i|\\mathrm{softmax}(V^T x_i))$"
+    "- $r_{ik} = \\pi_{ik} \\odot p(y_i|x_i, z_i=k) \\in [0,1]$ with constraint $\\sum_k r_{ik} = 1$ : responsibility of expert $k$ takes for data point $i$, where $\\odot$ is elementwise product, $\\pi_{ik} = p(z_i=k|x_i,\\theta)$ and $z_i$ is the latent variable for the experts. Explicitly, $p(z_i|x_i,\\theta)=\\mathrm{Catagorical}(z_i|\\mathrm{softmax}(V^T x_i))$"
    ]
   }
  ],
